syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/customer/customer_messages_description.proto";
import "avenue/financial/protobuf/paymentterm/paymentterm_messages_description.proto";
import "avenue/financial/protobuf/product/product_messages_description.proto";
import "avenue/financial/protobuf/salestax/salestax_messages_description.proto";
import "avenue/financial/protobuf/recurringschedule/recurring_schedule_messages_description.proto";
import "avenue/financial/protobuf/recurringtemplate/recurring_template_messages_description.proto";





option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.recurringinvoice";
option java_outer_classname = "RecurringInvoiceMessagesDescriptionProto";

package avenue.financial.protobuf.recurringinvoice;

message RecurringInvoiceProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MetaProto meta = 2;
  avenue.financial.protobuf.core.MiniUserProto owner = 3;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 4;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 5;
  RecurringInvoiceInfoProto recurring_invoice_info = 6;

}

message AddRecurringInvoiceInfoProto{
  google.protobuf.StringValue recurring_invoice_number = 1;
  google.protobuf.StringValue po_so_number = 2;
  google.protobuf.StringValue recurring_invoice_date = 3;
  google.protobuf.StringValue due_date = 4;
  google.protobuf.StringValue customer_id = 5;
  google.protobuf.StringValue payment_term_id = 6;
  google.protobuf.StringValue memos = 7;
  PaymentStatusProto payment_status = 8;
  google.protobuf.StringValue send_date_time = 9;
  google.protobuf.StringValue internal_notes = 10;
  google.protobuf.StringValue footer_notes = 11;
//  google.protobuf.DoubleValue sub_total = 12;
//  google.protobuf.DoubleValue tax_total = 13;
//  google.protobuf.DoubleValue total = 14;
  avenue.financial.protobuf.core.AddressProto billing_address = 16;
  google.protobuf.StringValue recurring_schedule_id = 17;
  google.protobuf.StringValue recurring_template_id = 18;


}
message RecurringInvoiceInfoProto{
  google.protobuf.StringValue invoice_number = 1;
  google.protobuf.StringValue po_so_number = 2;
  google.protobuf.StringValue invoice_date = 3;
  google.protobuf.StringValue next_recurring_invoice_date = 4;
  google.protobuf.StringValue due_date = 5;
  avenue.financial.protobuf.customer.CustomerProto customer=6;
  avenue.financial.protobuf.paymentterm.PaymentTermProto payment_term=7;
  google.protobuf.StringValue memos = 8;
  PaymentStatusProto payment_status = 9;
  google.protobuf.StringValue send_date_time =10 ;
  google.protobuf.StringValue internal_notes = 11;
  google.protobuf.StringValue footer_notes = 12;
  google.protobuf.DoubleValue sub_total = 13;
  google.protobuf.DoubleValue tax_total = 14;
  google.protobuf.DoubleValue total = 15;
  google.protobuf.BoolValue is_invoice_sent = 16;
  avenue.financial.protobuf.core.AddressProto billing_address = 17;
  repeated RecurringInvoiceItemProto items = 18;
  avenue.financial.protobuf.recurringschedule.RecurringScheduleProto recurring_schedule = 19;
  avenue.financial.protobuf.recurringtemplate.RecurringTemplateProto recurring_template=20;




}
message AddRecurringInvoiceProto{

  avenue.financial.protobuf.core.MiniUserProto owner = 1;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 2;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 3;
  AddRecurringInvoiceInfoProto recurring_invoice_info = 4;
  repeated AddRecurringInvoiceItemProto items = 5;


}

message UpdateRecurringInvoiceProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MiniUserProto owner = 2;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 3;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 4;
  AddRecurringInvoiceInfoProto recurring_invoice_info = 5;
  repeated AddRecurringInvoiceItemProto items = 6;



}

message AddRecurringInvoiceItemProto{
  google.protobuf.StringValue recurring_invoice_id = 1;
  google.protobuf.StringValue product_id = 2;
  google.protobuf.Int32Value quantity = 3;
  google.protobuf.StringValue uom = 4;
  google.protobuf.DoubleValue price = 5;
  google.protobuf.StringValue tax1_id = 6;
  google.protobuf.StringValue tax2_id = 7;

}

message RecurringInvoiceItemProto{
  avenue.financial.protobuf.product.ProductProto product = 1;
  google.protobuf.Int32Value quantity = 2;
  google.protobuf.StringValue uom = 3;
  google.protobuf.DoubleValue price = 4;
  avenue.financial.protobuf.salestax.SalesTaxProto tax1 = 5;
  avenue.financial.protobuf.salestax.SalesTaxProto tax2 = 6;

}
enum PaymentStatusProto{
  UNPAID = 0;
  PARTIAL_PAID = 1;
  PAID = 2;

}




